board view lists and cards

--- a/eclipse-workspace/Sprint1/src/main/java/views/cardView.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/views/cardView.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
@@ -117,7 +116,7 @@
                   <Font size="40.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" text="Edit Title">
                <VBox.margin>
                   <Insets left="285.0" top="20.0" />
                </VBox.margin>
