--- a/eclipse-workspace/Sprint1/src/main/java/main/board_view.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/board_view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.BoardController">
    <top>
@@ -26,7 +25,7 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Cards">
               <items>
-                <MenuItem mnemonicParsing="false" text="Add" />
+                <MenuItem mnemonicParsing="false" onAction="#addCardClicked" text="Add" />
                   <MenuItem mnemonicParsing="false" text="Delete" />
                   <MenuItem mnemonicParsing="false" text="Rename" />
               </items>
@@ -41,11 +40,6 @@
       </MenuBar>
    </top>
    <center>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="200.0" prefWidth="100.0" />
-            <VBox fx:id="field2" prefHeight="200.0" prefWidth="100.0" />
-         </children>
-      </HBox>
+      <HBox fx:id="mainHBox" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
