--- a/eclipse-workspace/Sprint1/src/main/java/main/cardView.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/cardView.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.CardController">
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="cardLabelBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Card Labels:">
                <VBox.margin>
@@ -20,17 +21,8 @@
                   <Font name="System Bold" size="17.0" />
                </font>
             </Label>
-            <Label text="Design">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Label>
-            <Label text="Urgent">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </Label>
-            <Button mnemonicParsing="false" text="Edit Labels">
+            <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" />
+            <Button mnemonicParsing="false" onAction="#editLabelsClicked" text="Edit Labels">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
@@ -75,7 +67,7 @@
                   <Insets top="10.0" />
                </padding>
             </CheckBox>
-            <Button mnemonicParsing="false" text="Edit Checklist">
+            <Button mnemonicParsing="false" onAction="#editCheckListClicked" text="Edit Checklist">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
@@ -89,7 +81,7 @@
    <center>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Card Description" textAlignment="CENTER">
+            <Label fx:id="descriptionLabel" text="Card Description" textAlignment="CENTER">
                <font>
                   <Font size="25.0" />
                </font>
@@ -97,7 +89,7 @@
                   <Insets left="60.0" />
                </VBox.margin>
             </Label>
-            <Button mnemonicParsing="false" text="Edit Description">
+            <Button mnemonicParsing="false" onAction="#editDescriptionClicked" text="Edit Description">
                <VBox.margin>
                   <Insets left="100.0" top="20.0" />
                </VBox.margin>
@@ -108,7 +100,7 @@
    <top>
       <VBox prefHeight="110.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Title">
+            <Label fx:id="nameLabel" text="Title">
                <VBox.margin>
                   <Insets left="275.0" />
                </VBox.margin>
@@ -116,7 +108,7 @@
                   <Font size="40.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" text="Edit Title">
+            <Button mnemonicParsing="false" onAction="#editNameClicked" text="Edit Name">
                <VBox.margin>
                   <Insets left="285.0" top="20.0" />
                </VBox.margin>
@@ -124,4 +116,11 @@
          </children>
       </VBox>
    </top>
+   <bottom>
+      <Button mnemonicParsing="false" onAction="#doneClicked" text="Done" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="20.0" />
+         </BorderPane.margin>
+      </Button>
+   </bottom>
 </BorderPane>
