--- a/eclipse-workspace/Sprint1/src/main/java/main/cardView.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/cardView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -34,9 +33,9 @@
       </VBox>
    </left>
    <right>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="checkListBox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Checklist: ">
+            <Label fx:id="checklistLabel" text="Checklist: ">
                <padding>
                   <Insets top="10.0" />
                </padding>
@@ -44,29 +43,6 @@
                   <Font size="17.0" />
                </font>
             </Label>
-            <CheckBox mnemonicParsing="false" text="CheckBox">
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-            </CheckBox>
-            <CheckBox mnemonicParsing="false" text="CheckBox">
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-            </CheckBox>
-            <CheckBox mnemonicParsing="false" text="CheckBox">
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets right="2.0" />
-               </VBox.margin>
-            </CheckBox>
-            <CheckBox mnemonicParsing="false" text="CheckBox">
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-            </CheckBox>
             <Button mnemonicParsing="false" onAction="#editCheckListClicked" text="Edit Checklist">
                <VBox.margin>
                   <Insets top="20.0" />
