--- a/eclipse-workspace/Sprint1/src/main/java/main/boardSelection.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/boardSelection.fxml
@@ -59,7 +59,7 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#createNewBoard" text="Create new board">
+                  <Button id="createBoard" mnemonicParsing="false" onAction="#createNewBoard" text="Create new board">
                      <HBox.margin>
                         <Insets left="250.0" />
                      </HBox.margin>
