glorious! everything working and some new features added

--- a/eclipse-workspace/Sprint1/src/main/java/main/board_view.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/board_view.fxml
@@ -14,6 +14,8 @@
             <items>
               <MenuItem id="saveBoard" mnemonicParsing="false" onAction="#saveBoard" text="Save Board" />
                   <MenuItem id="exitBoard" mnemonicParsing="false" onAction="#exitBoard" text="Exit Board" />
+                  <MenuItem id="renameBoard" mnemonicParsing="false" onAction="#renameBoard" text="Rename Board" />
+                  <MenuItem id="deleteBoard" mnemonicParsing="false" onAction="#deleteCurrentBoard" text="Delete Board" />
             </items>
           </Menu>
           <Menu id="listDropDown" mnemonicParsing="false" text="Lists">
