--- a/eclipse-workspace/Sprint1/src/main/java/main/loginView.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/loginView.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
@@ -22,8 +22,12 @@
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
                   </Text>
-                  <ChoiceBox prefWidth="150.0" translateX="180.0" translateY="30.0" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:" textOrigin="CENTER" translateX="70.0" translateY="100.0" wrappingWidth="55.892578125">
+                  <ComboBox prefWidth="150.0" promptText="Localhost">
+                     <VBox.margin>
+                        <Insets left="170.0" top="28.0" />
+                     </VBox.margin>
+                  </ComboBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:" textOrigin="CENTER" translateX="70.0" translateY="100.0" wrappingWidth="74.892578125">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
@@ -36,7 +40,7 @@
                         <Insets left="175.0" top="50.0" />
                      </VBox.margin>
                   </TextField>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" textOrigin="CENTER" translateX="70.0" translateY="50.0" wrappingWidth="55.892578125">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" textOrigin="CENTER" translateX="70.0" translateY="50.0" wrappingWidth="68.892578125">
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
