--- a/eclipse-workspace/Sprint1/src/main/java/main/boardSelection.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/boardSelection.fxml
@@ -11,9 +11,9 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.SelectionController">
    <top>
-      <Label text="Select your board or add a new one below:" BorderPane.alignment="CENTER">
+      <Label fx:id="selectBoardLabel" text="Select your board :" BorderPane.alignment="CENTER">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold Italic" size="37.0" />
          </font>
          <padding>
             <Insets top="50.0" />
@@ -23,24 +23,21 @@
    <left>
       <VBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="450.0">
+            <HBox maxWidth="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0">
                <children>
                   <Label prefHeight="18.0" prefWidth="61.0" text="Board:">
                      <HBox.margin>
-                        <Insets left="200.0" top="50.0" />
+                        <Insets left="150.0" top="50.0" />
                      </HBox.margin>
-                     <padding>
-                        <Insets right="20.0" />
-                     </padding>
                   </Label>
                   <ComboBox id="dropdown" fx:id="dropDownField" prefWidth="150.0">
                      <HBox.margin>
-                        <Insets top="50.0" />
+                        <Insets top="47.0" />
                      </HBox.margin>
                   </ComboBox>
                   <Button id="loadButton" minWidth="48.0" mnemonicParsing="false" onAction="#loadBoardButton" prefHeight="32.0" prefWidth="48.0" text="Load">
                      <HBox.margin>
-                        <Insets top="45.0" />
+                        <Insets left="40.0" top="44.0" />
                      </HBox.margin>
                   </Button>
                </children>
@@ -49,7 +46,7 @@
                <children>
                   <Label prefHeight="14.0" prefWidth="37.0" text="OR">
                      <HBox.margin>
-                        <Insets left="300.0" />
+                        <Insets left="290.0" />
                      </HBox.margin>
                      <font>
                         <Font name="System Bold" size="23.0" />
@@ -59,7 +56,7 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button id="createBoard" mnemonicParsing="false" onAction="#createNewBoard" text="Create new board">
+                  <Button id="createBoard" mnemonicParsing="false" onAction="#createNewBoard" prefHeight="66.0" prefWidth="115.0" text="Create new board">
                      <HBox.margin>
                         <Insets left="250.0" />
                      </HBox.margin>
