--- a/eclipse-workspace/Sprint1/src/main/java/main/loginView.fxml
+++ b/eclipse-workspace/Sprint1/src/main/java/main/loginView.fxml
@@ -9,15 +9,16 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.InitialController">
    <children>
       <TitledPane animated="false" layoutY="-39.0" prefHeight="390.0" prefWidth="409.0" text="Trello">
          <content>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: gray;">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Serverhost:" translateX="70.0" translateY="50.0" wrappingWidth="67.892578125">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Serverhost:" translateX="70.0" translateY="50.0" wrappingWidth="67.892578125">
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
@@ -27,30 +28,36 @@
                         <Insets left="170.0" top="28.0" />
                      </VBox.margin>
                   </ComboBox>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:" textOrigin="CENTER" translateX="70.0" translateY="100.0" wrappingWidth="74.892578125">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:" textOrigin="CENTER" translateX="70.0" translateY="100.0" wrappingWidth="74.892578125">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
+                     <font>
+                        <Font name="Chalkboard" size="13.0" />
+                     </font>
                   </Text>
-                  <TextField id="usernameField" fx:id="usernameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="26.0" prefWidth="166.0" translateY="30.0">
+                  <TextField id="usernameField" fx:id="usernameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="26.0" prefWidth="166.0" style="-fx-background-color: black; -fx-text-inner-color: white;" translateY="30.0">
                      <VBox.margin>
                         <Insets left="175.0" top="50.0" />
                      </VBox.margin>
                   </TextField>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" textOrigin="CENTER" translateX="70.0" translateY="50.0" wrappingWidth="68.892578125">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:" textOrigin="CENTER" translateX="70.0" translateY="50.0" wrappingWidth="68.892578125">
                      <cursor>
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
+                     <font>
+                        <Font name="Chalkboard SE Light" size="13.0" />
+                     </font>
                   </Text>
-                  <PasswordField fx:id="passwordField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="166.0">
+                  <PasswordField fx:id="passwordField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="166.0" style="-fx-background-color: black; -fx-text-inner-color: white;">
                      <VBox.margin>
                         <Insets left="175.0" top="30.0" />
                      </VBox.margin>
                   </PasswordField>
-                  <Button id="loginButton" mnemonicParsing="false" onAction="#loginPressed" prefHeight="20.0" prefWidth="56.0" text="Log in">
+                  <Button id="loginButton" mnemonicParsing="false" onAction="#loginPressed" prefHeight="20.0" prefWidth="56.0" style="-fx-background-radius: 20; -fx-background-color: green; -fx-text-fill: white;" text="Log in">
                      <VBox.margin>
                         <Insets left="170.0" top="40.0" />
                      </VBox.margin>
